# rdm4001

./: .gitignore  .gitmodules  Doxyfile  README.md  conanfile.txt  console.cpp  console.hpp  defs.hpp  event.hpp  fun.cpp  fun.hpp  game.cpp  game.hpp  graph.cpp  graph.hpp  input.cpp  input.hpp  launcher.cpp  launcher.hpp  meson.build  meson.options  physics.cpp  physics.hpp  scheduler.cpp  scheduler.hpp  settings.cpp  settings.hpp  signal.cpp  signal.hpp  sound.cpp  sound.hpp  state.cpp  state.hpp  world.cpp  world.hpp
data/: README.txt  records.txt
data/dat1/: blur.fs.glsl  heightmap.fs.glsl  heightmap.vs.glsl  materials.json  mesh.fs.glsl  mesh.vs.glsl  post.fs.glsl  post.vs.glsl  ray_march.fs.glsl  sprite.fs  sprite.vs  test.fs  test.vs
data/dat1/bsp/: brush.fs.glsl  brush.vs.glsl  sky.fs.glsl
data/dat1/dbg/: p_line.fs.glsl  p_line.vs.glsl
data/dat1/gui/: image.fs.glsl  panel.fs.glsl  panel.vs.glsl  text.fs.glsl
data/dat1/rt/: map.fs.glsl
data/dat3/: Debug.json  fps_controller.bas  gui.json  root.xml  wawaworld.xml
data/dat3/components/: fps.xml
data/dat5/baseq3/maps/: chud.bsp  ffa_4quad.max  ffa_naamda.bak  ffa_naamda.bsp  ffa_naamda.map  ffa_naamda.prt  ffa_naamda.srf  malach.bak  malach.bsp  malach.map  malach.prt  malach.srf  rdm_hall.bsp  testterrain.srf
data/dat5/baseq3/models/: andi_rig.mtl
data/dat5/baseq3/models/mapobjects/: bar.md3  chains.md3  chains_45.md3  chains_v.md3  eagle_banner.md3  eagle_banner_strgg.md3  eagle_bar.md3  eagle_bar_strgg.md3  eagleban.md3  pj_lamp.md3
data/dat5/baseq3/models/mapobjects/barrel/: barrel.md3  barrel2.md3  barrel_fire.md3  barrel_fire2.md3  barrelq3.md3  qkq_barrel.md3  qkq_barrel_2.md3
data/dat5/baseq3/models/mapobjects/console/: console.md3  hologram.md3
data/dat5/baseq3/models/mapobjects/cross/: cross.md3
data/dat5/baseq3/models/mapobjects/flag/: flag_strgg.md3
data/dat5/baseq3/models/mapobjects/grenadel/: grenadel.md3
data/dat5/baseq3/models/mapobjects/horned/: horned.md3
data/dat5/baseq3/models/mapobjects/signs/: biosign.md3
data/dat5/baseq3/models/mapobjects/slamp/: slamp.md3
data/dat5/baseq3/models/mapobjects/spotlamp1/: spotlamp1.md3  spotlamp1_blue.md3  spotlamp1_red.md3
data/dat5/baseq3/models/mapobjects/weeds/: weeds.md3  weeds_2.md3
data/dat5/baseq3/scripts/: common.shader  default_project.proj  entities.def  models.shader  shaderlist.txt  skies.shader
data/dat5/baseq3/textures/rdm/: !teleport.tga  !water.tga  !water2.tga  aaatrigger.tga  bars.tga  bevel.tga  block.tga  blue.tga  bluenotemplate.tga  blueteamposter.tga  bluetemplate.tga  board.tga  brick.tga  canyon.tga  cardboard.tga  carpet.tga  clip.tga  computer_scr.tga  concrete.tga  contentempty.tga  contentwater.tga  cross.tga  dried_mud.tga  grass.tga  gravel.tga  green.tga  hazard.tga  hint.tga  hl.tga  ladderplcholder.tga  leaf.tga  moonrock.tga  niceshotgun.tga  noclip.tga  noise.tga  null.tga  origin.tga  plaster.tga  ramteamposter.tga  red.tga  (+18 more)
data/dat5/gui/: ammo.xml  ammo_controller.bas  buttons.xml  hud.xml  hud_controller.bas  main_menu.xml  online_play.xml
data/dat5/weapons/: w_magnum.glb  w_sniper_rifle.glb
gfx/: base_context.cpp  base_context.hpp  base_device.cpp  base_device.hpp  base_types.cpp  base_types.hpp  camera.cpp  camera.hpp  engine.cpp  engine.hpp  entity.cpp  entity.hpp  gl_context.cpp  gl_context.hpp  gl_device.cpp  gl_device.hpp  gl_types.cpp  gl_types.hpp  heightmap.cpp  heightmap.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  rendercommand.cpp  rendercommand.hpp  renderpass.cpp  renderpass.hpp  video.cpp  video.hpp
gfx/gui/: api.cpp  api.hpp  element.cpp  element.hpp  font.cpp  font.hpp  gui.cpp  gui.hpp  layout.cpp  layout.hpp
network/: bitstream.cpp  bitstream.hpp  crc_hash.cpp  crc_hash.hpp  entity.cpp  entity.hpp  network.cpp  network.hpp  player.cpp  player.hpp
putil/: fpscontroller.cpp  fpscontroller.hpp
raymarcher/: main.cpp  rgame.cpp  rgame.hpp
roadtrip/: america.cpp  america.hpp  main.cpp  pawn.cpp  pawn.hpp  roadtrip.cpp  roadtrip.hpp
script/: api.cpp  api.hpp  context.cpp  context.hpp  script.cpp  script.hpp  scriptcontext.cpp  scriptcontext.hpp
subprojects/: .gitignore
subprojects/assembly/: Library.cs  meson.build
subprojects/common/: filesystem.cpp  filesystem.hpp  guid.cpp  guid.hpp  logging.cpp  logging.hpp  meson.build  random.cpp  random.hpp
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
wawaworld/: gstate.cpp  gstate.hpp  main.cpp  map.cpp  map.hpp  planet.cpp  planet.hpp  tile.cpp  tile.hpp  weapon.cpp  weapon.hpp  wgame.cpp  wgame.hpp  worldspawn.cpp  worldspawn.hpp  wplayer.cpp  wplayer.hpp
wawaworld/weapons/: magnum.cpp  magnum.hpp  sniper.cpp  sniper.hpp
xdocs/: CVARS.md  HOWTO.md  HOWTO2.md
